Added basic slides and unlinked bib

--- a/presentation.tex
+++ b/presentation.tex
@@ -41,16 +41,22 @@
 \section{Problem}
 
 \begin{frame}{The Problem}
-    \begin{textblock*}{7cm}(5.5cm,0.5cm)
-    \begin{block}{Nemesyst} % {block width} (coords)
-    The solution
+
+    \begin{textblock*}{9cm}(3cm,2cm) % {block width} (coords)
+    % \includegraphics[width=\linewidth]{imgs/lindsey.jpg}
+    \includegraphics[width=\linewidth]{imgs/riseholme}
+    \end{textblock*}
+
+    \begin{textblock*}{5cm}(1cm,1.5cm)
+    \begin{block}{Outline} % {block width} (coords)
+      \begin{itemize}
+        \item Lack of specialists (Optimising human time)
+        \item Large variance in accuracy (Consistency)
+        \item Low human accuracy (0.25 loss)
+      \end{itemize}
     \end{block}
     \end{textblock*}
 
-    \begin{textblock*}{7.5cm}(5cm,3cm) % {block width} (coords)
-    % \includegraphics[width=\linewidth]{imgs/lindsey.jpg}
-    \includegraphics[width=\linewidth]{imgs/pipeline}
-    \end{textblock*}
 \end{frame}
 
 \section{Solution}
@@ -79,7 +85,7 @@
 
 \section{Progress}
 
-\begin{frame}{The Problem}
+\begin{frame}{Our Progress}
     \begin{textblock*}{7cm}(5.5cm,0.5cm)
     \begin{block}{Nemesyst} % {block width} (coords)
     The solution
@@ -90,6 +96,15 @@
     % \includegraphics[width=\linewidth]{imgs/lindsey.jpg}
     \includegraphics[width=\linewidth]{imgs/pipeline}
     \end{textblock*}
+\end{frame}
+
+\section{References}
+
+\begin{frame}[allowframebreaks]
+\frametitle{References}
+    \bibliographystyle{unsrt}
+    \bibliography{bibliography.bib,conference.bib}%must have no space after ,
+
 \end{frame}
 
 % \begin{frame}{The project}
